Minor updates Add z-index on tabs Fixed forms

--- a/app.component/Style.css
+++ b/app.component/Style.css
@@ -15,6 +15,8 @@ background-repeat: no-repeat;
     position: fixed;
     top: 0;   left: 0;   right: 0;
     width: 100%;
+    z-index: 1;
+
 }
 ul {
     width: 100%;
@@ -37,8 +39,8 @@ li {
     font-size: 30px;
     text-align: center;
     margin: 3px 0 3px 0;
-
 }
+
 li a {
     display: block;
     color: white;
